third_party/WebKit/WebCore/rendering/MediaControlElements.h
@@ -85,7 +85,7 @@ public:
     virtual void attach();
     virtual bool rendererIsNeeded(RenderStyle*);
 
-    RenderStyle* styleForElement();
+    virtual PassRefPtr<RenderStyle> styleForElement();
     void attachToParent(Element*);
     void update();
     virtual void updateStyle();
@@ -123,7 +123,7 @@ public:
     virtual void attach();
     virtual bool rendererIsNeeded(RenderStyle*);
 
-    RenderStyle* styleForElement();
+    virtual PassRefPtr<RenderStyle> styleForElement();
     void attachToParent(Element*);
     void update();
     void updateStyle();
@@ -215,8 +215,10 @@ class MediaControlTimeDisplayElement : public MediaControlElement {
 public:
     MediaControlTimeDisplayElement(Document*, PseudoId, HTMLMediaElement*);
     void setVisible(bool);
+    virtual PassRefPtr<RenderStyle> styleForElement();
+
 private:
-    Length m_cachedWidth;
+    bool m_isVisible;
 };
 
 // ----------------------------
