third_party/WebKit/WebCore/rendering/RenderMedia.cpp
@@ -544,7 +544,7 @@ bool RenderMedia::shouldShowTimeDisplayControls() const
         return false;
 
     int width = mediaElement()->renderBox()->width();
-    return width >= minWidthToDisplayTimeDisplays;
+    return width >= minWidthToDisplayTimeDisplays * style()->effectiveZoom();
 }
 
 } // namespace WebCore
